# ministack_cli

./: main.py  pyproject.toml
ministack_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
